--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database Connection
-DATABASE_URL=postgresql://postgres:Kagan2414@localhost:6000/college_scheduling
+DATABASE_URL=postgresql://college_staff_user:QbSa1883RSjSYz9UzfUmqNoMC1jXvNx5@dpg-d625v015pdvs73b91710-a.oregon-postgres.render.com:5432/college_staff?sslmode=require
 # Session Configuration
 SESSION_SECRET=college-scheduling-secret-key-change-in-production
 
