--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ SESSION_SECRET=college-scheduling-secret-key-change-in-production
 
 # Server Configuration
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 
 
